Fixed: Bug 58645 - misaligned inbox tab description
Set correct margin-top

--- a/ui/apps/io.ox/mail/style.less
+++ b/ui/apps/io.ox/mail/style.less
@@ -1150,8 +1150,8 @@ textarea.inplace-editor {
 
 .mail-categories-dialog {
     .description {
-        padding-left: 34px;
-        padding-bottom: 6px;
+        padding: 0 16px;
+        margin-top: 10px;
     }
     .category-item {
         position: relative;
